Fix header styles on tablet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,13 +86,13 @@ header {
   line-height: 0;
 }
 
-.menu {
-  font-size: 110%;
+.header-nav-menu {
+  font-size: 160%;
   letter-spacing: 4px;
   text-align: center;
 }
 
-.menu > li {
+.header-nav-menu > li {
   margin-bottom: 1em;
 }
 
@@ -211,11 +211,15 @@ footer {
     padding-right: 1rem;
   }
 
-  .menu {
+  .header-nav-menu {
+    font-size: 130%;
     display: flex;
   }
 
-  .menu > li {
+  .header-nav-menu > li {
+    margin-bottom: 0;
+  }
+  .header-nav-menu > li:not(:first-child) {
     padding-left: 1rem;
   }
 
